# rust_web_auditor

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/auditer/: mod.rs
src/formatter/: formatter.rs  mod.rs
src/tests/supplement/: four_urls.html  no_urls.html
src/webdriver/: mod.rs  webdriver.rs
src/webscraper/: find_urls.rs  mod.rs
