[package]
name = "web_audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "^0.18.0"
tokio = { version = "1", features = ["full"] }
geckodriver = "0.31.0"
futures = "0.3.21"

[dev-dependencies]
tokio-test = "*"
async-trait = "^0.1.53"
futures = "0.3"
no_deadlocks = "1.3.0"