[package]
name = "web_audit"
version = "0.0.1"
authors = ["jase-k <jasekraft12@gmail.com>"]
license = "MIT"
description = "A simple to use tool to get detailed data about your website"
readme = "readme.md"
repository = "https://github.com/jase-k/rust_web_auditor"
homepage = "https://github.com/jase-k/rust_web_auditor"
keywords = ["cli", "web-audit", "web-performance", "website"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "^0.18.0"
tokio = { version = "1", features = ["full"] }
geckodriver = "0.31.0"
futures = "0.3.21"
async-recursion = "1.0.0"
serde = "1.0.136"
serde_json = "1.0.79"
clap = { version = "3.1.12", features = ["derive"] }
reqwest = "0.11.10"

[dev-dependencies]
tokio-test = "0.4.2"
async-trait = "^0.1.53"
futures = "0.3"
no_deadlocks = "1.3.0"